--- a/projeto_md2/contato.html
+++ b/projeto_md2/contato.html
@@ -43,12 +43,12 @@
         
         <div class="form-group">
       <label for="exampleInputPassword1">Seu nome</label>
-      <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Digite seu nome">
+      <input type="text" class="form-control" name="nome" id="exampleInputPassword1" placeholder="Digite seu nome">
     </div>
 
 
       <label for="exampleInputEmail1">Endereço de email</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Digite seu email">
+      <input type="email" class="form-control" name="email" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Digite seu email">
       <small id="emailHelp" class="form-text text-muted">Nunca vamos compartilhar seu email, com ninguém.</small>
     </div>
     
@@ -63,7 +63,7 @@
 
 <div class="form-group row">
   <label for="inputEmail3" class="col-sm-2 col-form-label">Assunto/Código</label>
-  <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
+  <input type="text" class="form-control" name="tema" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
 </div>
     <div class="form-group">
       <label for="exampleFormControlTextarea1">Digite sua mensagem</label>
@@ -79,7 +79,7 @@
       <input type="checkbox" class="form-check-input" id="exampleCheck1">
       <label class="form-check-label" for="exampleCheck1">Clique em mim</label>
     </div>
-    <button type="submit" class="btn btn-primary">Enviar</button>
+    <button type="submit" class="btn btn-primary" value="enviar">Enviar</button>
 
 
   </form>
